# landlord

./: .coverage  .gitignore  README.md  database.db  pyproject.toml  tasks.py
documentation/: architecture.MD  instructions.MD  requirements.MD  testing.MD  work_log.MD
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: database.db  database.py  service.py  service_test.py  ui.py  unit.py  user.py
src/entities/: charge.py  lease.py  rent.py  unit.py  user.py
src/repositories/: charge_repository.py  lease_repository.py  rent_repository.py  unit_repository.py  user_repository.py
src/services/: service.py
src/tests/: database_test.py  lease_repository_test.py  service_test.py  user_repository_test.py
src/ui/: end_leases_screen.py  get_statistics_screen.py  insert_charges_screen.py  insert_leases_screen.py  insert_rents_screen.py  insert_units_screen.py  login_screen.py  menu_screen.py  sell_units_screen.py  signup_screen.py  ui.py
