[tool.poetry]
name = "landlord"
version = "0.1.0"
description = ""
authors = ["Miika Rannikko <miika.rannikko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uuid = "^1.30"
invoke = "^1.6.0"
mock = "^4.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
